--- a/index.html
+++ b/index.html
@@ -1,112 +1,176 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
+  <style>
+    body {
+      background-color: rgb(25, 25, 25);
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .title {
+      font-size: 30px;
+      font-weight: bold;
+    }
+
+    .subtext {
+      font-size: 15px;
+      margin-top: -20px;
+      padding-bottom: 20px;
+    }
+
+    .subtitle {
+      font-size: 20px;
+    }
+
+    .move-icon {
+      height: 150px;
+    }
+
+    .move-button {
+      background-color: transparent;
+      border-width: 3px;
+      border-style: solid;
+      border-color: white;
+      width: 165px;
+      height: 165px;
+      border-radius: 10px;
+      margin-right: 40px;
+      cursor: pointer;
+    }
+
+  </style>
 </head>
+
 <body>
-  <p>Rock Paper Scissors - The Age of Empires 2 Version.</p>
-  <p>Inspired by T-West, Ornulu, and Spirit of the Law</p>
-  <p>Spearmen beat Cavalry who beat Archers who beat Spearmen</p>
+  <p class="title">Rock Paper Scissors - The Age of Empires 2 Version.</p>
+  <p class="subtext">Dedicated to Pancha gang gaming sessions. Inspired by T-West, Ornulu, and Spirit of the Law</p>
+  <p class="subtitle">Spearmen beat Cavalry who beat Archers who beat Spearmen</p>
 
   <button onclick="
-    const randomNumber = Math.random()
-
-    let computerMove = '';
-
-    if (randomNumber >= 0 && randomNumber < 1/3) {
-      computerMove = 'Spearmen';
-    } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-      computerMove = 'Cavalry';
-    } else if (randomNumber >=2/3 && randomNumber<1) {
-      computerMove = 'Archers';
-    }
-
-    console.log(computerMove);
-
-    let result = '';
-
-    if (computerMove === 'Spearmen') {
-      result = 'Tie.';
-    } else if (computerMove === 'Cavalry') {
-      result = 'You Win.';
-    } else if (computerMove === 'Archers') {
-      result = 'You Lose.';
-    }
-
-    alert (`You picked Spearmen. Computer picked ${computerMove}. ${result}`);
-
-  ">Spearmen</button>
+    playGame('Spearmen');
+  " class="move-button">
+    <img src="./images/spearmen.webp" class="move-icon"></button>
 
 
   <button onclick="
-
-  const randomNumber = Math.random()
-
-  let computerMove = '';
-
-  if (randomNumber >= 0 && randomNumber < 1/3) {
-    computerMove = 'Spearmen';
-  } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-    computerMove = 'Cavalry';
-  } else if (randomNumber >=2/3 && randomNumber<1) {
-    computerMove = 'Archers';
-  }
-
-  console.log(computerMove);
-
-  let result = '';
-
-  if (computerMove === 'Spearmen') {
-    result = 'You Lose.';
-  } else if (computerMove === 'Cavalry') {
-    result = 'Tie.';
-  } else if (computerMove === 'Archers') {
-    result = 'You Win.';
-  }
-
-  alert (`You picked Cavalry. Computer picked ${computerMove}. ${result}`);
-  
-  ">Cavalry</button>
+    playGame('Cavalry');
+  " class="move-button">
+    <img src="./images/cavalry.webp" class="move-icon"></button>
 
 
   <button onclick="
+    playGame('Archers');
+    " class="move-button">
+    <img src="images/archer.jpeg" class="move-icon"></button>
 
-  const randomNumber = Math.random()
+  <p class="js-result"></p>
+  <p class="js-moves"></p>
+  <p class="js-score"></p>
 
-  let computerMove = '';
-
-  if (randomNumber >= 0 && randomNumber < 1/3) {
-    computerMove = 'Spearmen';
-  } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-    computerMove = 'Cavalry';
-  } else if (randomNumber >=2/3 && randomNumber<1) {
-    computerMove = 'Archers';
-  }
-
-  console.log(computerMove);
-
-  let result = '';
-
-  if (computerMove === 'Spearmen') {
-    result = 'You Win.';
-  } else if (computerMove === 'Cavalry') {
-    result = 'You Lose.';
-  } else if (computerMove === 'Archers') {
-    result = 'Tie.';
-  }
-
-  alert (`You picked Archers. Computer picked ${computerMove}. ${result}`);
-
-  
-  
-  ">Archers</button>
+  <button onclick="
+    score.wins = 0;
+    score.losses = 0;
+    score.ties = 0;
+    localStorage.removeItem('score');
+    updateScoreElement();
+  ">Reset Score</button>
 
   <script>
+    let score = JSON.parse(localStorage.getItem('score')) || {
+      wins: 0,
+      losses: 0,
+      ties: 0
+  };
 
+    updateScoreElement();
+    /*
+    if (!score) {
+      score = {
+        wins: 0,
+        losses: 0,
+        ties: 0
+      };
+    }
+    */
 
+    function playGame(playerMove) {
+      const computerMove = pickComputerMove();
+
+      let result = '';
+
+      if (playerMove === 'Spearmen') {
+        if (computerMove === 'Archers') {
+          result = 'You Lose.';
+        } else if (computerMove === 'Cavalry') {
+          result = 'You Win.';
+        } else if (computerMove === 'Spearmen') {
+          result = 'Tie.';
+        }
+
+      } else if (playerMove === 'Cavalry') {
+        if (computerMove === 'Archers') {
+          result = 'You Win.';
+        } else if (computerMove === 'Cavalry') {
+          result = 'Tie.';
+        } else if (computerMove === 'Spearmen') {
+          result = 'You Lose.';
+        }
+
+      } else if (playerMove === 'Archers') {
+        if (computerMove === 'Archers') {
+          result = 'Tie.';
+        } else if (computerMove === 'Cavalry') {
+          result = 'You Lose.';
+        } else if (computerMove === 'Spearmen') {
+          result = 'You Win.';
+        }
+      }
+
+      if (result === 'You Win.') {
+        score.wins += 1;
+      } else if (result === 'You Lose.') {
+        score.losses +=1;
+      } else if (result === 'Tie.') {
+        score.ties +=1;
+      }
+
+      localStorage.setItem('score', JSON.stringify(score));
+
+      updateScoreElement();
+
+      document.querySelector('.js-result').innerHTML = result;
+
+      document.querySelector ('.js-moves').innerHTML = `You ${playerMove} - ${computerMove} Computer`;
+
+    }
+
+    function updateScoreElement() {
+      document.querySelector('.js-score')
+        .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
+    }
+
+    function pickComputerMove() {
+
+      const randomNumber = Math.random();
+
+      let computerMove = '';
+
+      if (randomNumber >= 0 && randomNumber < 1 / 3) {
+        computerMove = 'Archers';
+      } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
+        computerMove = 'Cavalry';
+      } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
+        computerMove = 'Spearmen';
+      }
+
+      return computerMove;
+    }
   </script>
-  
+
 </body>
 </html>
