--- a/index.html
+++ b/index.html
@@ -5,45 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <style>
-    body {
-      background-color: rgb(25, 25, 25);
-      color: white;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
-    .title {
-      font-size: 30px;
-      font-weight: bold;
-    }
-
-    .subtext {
-      font-size: 15px;
-      margin-top: -20px;
-      padding-bottom: 20px;
-    }
-
-    .subtitle {
-      font-size: 20px;
-    }
-
-    .move-icon {
-      height: 150px;
-    }
-
-    .move-button {
-      background-color: transparent;
-      border-width: 3px;
-      border-style: solid;
-      border-color: white;
-      width: 165px;
-      height: 165px;
-      border-radius: 10px;
-      margin-right: 40px;
-      cursor: pointer;
-    }
-
-  </style>
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -68,9 +30,9 @@
     " class="move-button">
     <img src="images/archer.jpeg" class="move-icon"></button>
 
-  <p class="js-result"></p>
+  <p class="js-result result"></p>
   <p class="js-moves"></p>
-  <p class="js-score"></p>
+  <p class="js-score score"></p>
 
   <button onclick="
     score.wins = 0;
@@ -78,99 +40,9 @@
     score.ties = 0;
     localStorage.removeItem('score');
     updateScoreElement();
-  ">Reset Score</button>
+  " class="reset-score-button">Reset Score</button>
 
-  <script>
-    let score = JSON.parse(localStorage.getItem('score')) || {
-      wins: 0,
-      losses: 0,
-      ties: 0
-  };
-
-    updateScoreElement();
-    /*
-    if (!score) {
-      score = {
-        wins: 0,
-        losses: 0,
-        ties: 0
-      };
-    }
-    */
-
-    function playGame(playerMove) {
-      const computerMove = pickComputerMove();
-
-      let result = '';
-
-      if (playerMove === 'Spearmen') {
-        if (computerMove === 'Archers') {
-          result = 'You Lose.';
-        } else if (computerMove === 'Cavalry') {
-          result = 'You Win.';
-        } else if (computerMove === 'Spearmen') {
-          result = 'Tie.';
-        }
-
-      } else if (playerMove === 'Cavalry') {
-        if (computerMove === 'Archers') {
-          result = 'You Win.';
-        } else if (computerMove === 'Cavalry') {
-          result = 'Tie.';
-        } else if (computerMove === 'Spearmen') {
-          result = 'You Lose.';
-        }
-
-      } else if (playerMove === 'Archers') {
-        if (computerMove === 'Archers') {
-          result = 'Tie.';
-        } else if (computerMove === 'Cavalry') {
-          result = 'You Lose.';
-        } else if (computerMove === 'Spearmen') {
-          result = 'You Win.';
-        }
-      }
-
-      if (result === 'You Win.') {
-        score.wins += 1;
-      } else if (result === 'You Lose.') {
-        score.losses +=1;
-      } else if (result === 'Tie.') {
-        score.ties +=1;
-      }
-
-      localStorage.setItem('score', JSON.stringify(score));
-
-      updateScoreElement();
-
-      document.querySelector('.js-result').innerHTML = result;
-
-      document.querySelector ('.js-moves').innerHTML = `You ${playerMove} - ${computerMove} Computer`;
-
-    }
-
-    function updateScoreElement() {
-      document.querySelector('.js-score')
-        .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
-    }
-
-    function pickComputerMove() {
-
-      const randomNumber = Math.random();
-
-      let computerMove = '';
-
-      if (randomNumber >= 0 && randomNumber < 1 / 3) {
-        computerMove = 'Archers';
-      } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-        computerMove = 'Cavalry';
-      } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-        computerMove = 'Spearmen';
-      }
-
-      return computerMove;
-    }
-  </script>
+  <script src="./scripts/script.js"></script>
 
 </body>
 </html>
