replace gifs with images

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
   <button onclick="
     playGame('Spearmen');
   " class="move-button">
-    <img src="./images/spearmen.webp" class="move-icon"></button>
+    <img src="./images/Spearmen.webp" class="move-icon"></button>
 
 
   <button onclick="
     playGame('Cavalry');
   " class="move-button">
-    <img src="./images/cavalry.webp" class="move-icon"></button>
+    <img src="./images/Cavalry.webp" class="move-icon"></button>
 
 
   <button onclick="
     playGame('Archers');
     " class="move-button">
-    <img src="images/archer.jpeg" class="move-icon"></button>
+    <img src="images/Archers.webp" class="move-icon"></button>
 
   <p class="js-result result"></p>
   <p class="js-moves"></p>
